tests/SyntaxError/Test29/test29.c
int main()
{
	int i=0;	
	for (i=0, i<5 , i=i+1 ){
		int a=i*2;	
	}

}

